# backend/docs/swagger.json
@@ -1,12 +1,84 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "API para geração de commits e tradução.",
-        "title": "Backend API",
+        "description": "API para geração de commits, tradução e validação de repositórios.",
+        "title": "SmartCommit API",
         "contact": {},
         "version": "1.0"
     },
     "host": "localhost:8080",
     "basePath": "/",
-    "paths": {}
+    "paths": {
+        "/validate": {
+            "get": {
+                "description": "Verifica se o caminho fornecido é válido e contém um repositório Git",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Validation"
+                ],
+                "summary": "Valida um repositório local",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Caminho do repositório",
+                        "name": "path",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/validation.ValidationResult"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.ValidationError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.ValidationError"
+                        }
+                    }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "handlers.ValidationError": {
+            "type": "object",
+            "properties": {
+                "error": {
+                    "type": "string"
+                }
+            }
+        },
+        "validation.ValidationResult": {
+            "type": "object",
+            "properties": {
+                "currentBranch": {
+                    "type": "string"
+                },
+                "error": {
+                    "type": "string"
+                },
+                "isValid": {
+                    "type": "boolean"
+                },
+                "lastModified": {
+                    "type": "string"
+                }
+            }
+        }
+    }
 }
