# backend/internal/api/router.go
@@ -1,6 +1,9 @@
 package api
 
 import (
+	"log"
+	"time"
+
 	"backend/internal/api/handlers"
 
 	"github.com/gin-gonic/gin"
@@ -12,12 +15,32 @@ import (
 func SetupRouter() *gin.Engine {
 	router := gin.Default()
 
+	// Middleware de logs para requisições
+	router.Use(func(c *gin.Context) {
+		start := time.Now()
+
+		// Processa a requisição
+		c.Next()
+
+		// Loga detalhes da requisição e resposta
+		latency := time.Since(start)
+		statusCode := c.Writer.Status()
+		log.Printf(
+			"[INFO] %s %s | %d | %s",
+			c.Request.Method,
+			c.Request.URL.Path,
+			statusCode,
+			latency,
+		)
+	})
+
 	// Documentação Swagger
 	router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 
 	// Rotas principais
-	router.POST("/commit", handlers.GenerateCommit) // Geração de commit
-	router.GET("/models", handlers.ListModels)      // Listar modelos disponíveis
+	router.POST("/commit", handlers.GenerateCommit)      // Geração de commit
+	router.GET("/models", handlers.ListModels)           // Listar modelos disponíveis
+	router.GET("/validate", handlers.ValidateRepository) // Validação de repositórios
 
 	return router
 }
